--- a/homework for introducing python.ipynb
+++ b/homework for introducing python.ipynb
@@ -1398,7 +1398,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {
     "collapsed": true
    },
@@ -1712,6 +1712,332 @@
     "print 'width:', struct.unpack('>b', gif[6])\n",
     "print 'heigth:', struct.unpack('>b', gif[8])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# ch8"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Things to Do\n",
+    "8.1. Assign the string 'This is a test of the emergency text system' to the variable test1, and write test1 to a file called test.txt.\n",
+    "8.2. Open the file test.txt and read its contents into the string test2. Are test1 and test2 the same?\n",
+    "8.3. Save these text lines to a file called books.csv. Notice that if the fields are separated by commas, you need to surround a field with quotes if it contains a comma.\n",
+    "    author,book\n",
+    "    J R R Tolkien,The Hobbit\n",
+    "    Lynne Truss,\"Eats, Shoots & Leaves\"\n",
+    "8.4. Use the csv module and its DictReader method to read books.csv to the variable books. Print the values in books. Did DictReader handle the quotes and commas in the second book’s title?\n",
+    "8.5. Create a CSV file called books.csv by using these lines:\n",
+    "    title,author,year\n",
+    "    The Weirdstone of Brisingamen,Alan Garner,1960\n",
+    "    Perdido Street Station,China Miéville,2000\n",
+    "    Thud!,Terry Pratchett,2005\n",
+    "    The Spellman Files,Lisa Lutz,2007\n",
+    "    Small Gods,Terry Pratchett,1992\n",
+    "8.6. Use the sqlite3 module to create a SQLite database called books.db, and a table called books with these fields: title (text), author (text), and year (integer).\n",
+    "8.7. Read books.csv and insert its data into the book table.\n",
+    "8.8. Select and print the title column from the book table in alphabetical order. 8.9. Select and print all columns from the book table in order of publication.\n",
+    "8.10. Use the sqlalchemy module to connect to the sqlite3 database books.db that you just made in exercise 8.6. As in 8.8, select and print the title column from the book table in alphabetical order.\n",
+    "8.11. Install the Redis server and the Python redis library (pip install redis) on your computer. Create a Redis hash called test with the fields count (1) and name ('Fester Bestertester'). Print all the fields for test.\n",
+    "8.12. Increment the count field of test and print it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 8.1\n",
+    "test1 = 'This is a test of the emergency text system'\n",
+    "with open('test.txt', 'w') as f:\n",
+    "    f.write(test1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.2\n",
+    "with open('test.txt', 'r') as f:\n",
+    "    test2 = f.read()\n",
+    "print test1 == test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 8.3\n",
+    "with open('books.csv', 'w') as f:\n",
+    "    f.write('''author,book\n",
+    "J R R Tolkien,The Hobbit\n",
+    "Lynne Truss,\"Eats, Shoots & Leaves\"''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fieldnames: ['author', 'book']\n",
+      "[{'book': 'The Hobbit', 'author': 'J R R Tolkien'}, {'book': 'Eats, Shoots & Leaves', 'author': 'Lynne Truss'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.4: yes\n",
+    "import csv\n",
+    "with open('books.csv', 'r') as f:\n",
+    "    c = csv.DictReader(f)\n",
+    "    print 'fieldnames:', c.fieldnames\n",
+    "    books = [row for row in c]\n",
+    "print books"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 8.5\n",
+    "with open('books.csv', 'w') as f:\n",
+    "    f.write('''title,author,year\n",
+    "The Weirdstone of Brisingamen,Alan Garner,1960\n",
+    "Perdido Street Station,China Miéville,2000\n",
+    "Thud!,Terry Pratchett,2005\n",
+    "The Spellman Files,Lisa Lutz,2007\n",
+    "Small Gods,Terry Pratchett,1992''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 8.6\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect('books.db')\n",
+    "curs = conn.cursor()\n",
+    "curs.execute('CREATE TABLE book(title VARCHAR(50), author VARCHAR(50), year INT)')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INSERT INTO book(title, author, year) VALUES('The Weirdstone of Brisingamen', 'Alan Garner', '1960')\n",
+      "INSERT INTO book(title, author, year) VALUES('Perdido Street Station', 'China Miéville', '2000')\n",
+      "INSERT INTO book(title, author, year) VALUES('Thud!', 'Terry Pratchett', '2005')\n",
+      "INSERT INTO book(title, author, year) VALUES('The Spellman Files', 'Lisa Lutz', '2007')\n",
+      "INSERT INTO book(title, author, year) VALUES('Small Gods', 'Terry Pratchett', '1992')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.7\n",
+    "import csv\n",
+    "with open('books.csv', 'r') as f:\n",
+    "    c = csv.DictReader(f)\n",
+    "    for row in c:\n",
+    "        command = 'INSERT INTO book(title, author, year) '+\\\n",
+    "            'VALUES(\\'{title}\\', \\'{author}\\', \\'{year}\\')'.format(**row)\n",
+    "        print command\n",
+    "        curs.execute(command)\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u'Perdido Street Station',), (u'Small Gods',), (u'The Spellman Files',), (u'The Weirdstone of Brisingamen',), (u'Thud!',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.8\n",
+    "curs.execute('SELECT title FROM book ORDER BY title')\n",
+    "titles = curs.fetchall()\n",
+    "print titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u'The Weirdstone of Brisingamen', u'Alan Garner', 1960), (u'Small Gods', u'Terry Pratchett', 1992), (u'Perdido Street Station', u'China Mi\\xe9ville', 2000), (u'Thud!', u'Terry Pratchett', 2005), (u'The Spellman Files', u'Lisa Lutz', 2007)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.9\n",
+    "curs.execute('SELECT * FROM book ORDER BY year')\n",
+    "rows = curs.fetchall()\n",
+    "print rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# curs.execute('DROP TABLE book')\n",
+    "curs.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u'The Weirdstone of Brisingamen', u'Alan Garner', 1960), (u'Perdido Street Station', u'China Mi\\xe9ville', 2000), (u'Thud!', u'Terry Pratchett', 2005), (u'The Spellman Files', u'Lisa Lutz', 2007), (u'Small Gods', u'Terry Pratchett', 1992)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.10\n",
+    "import sqlalchemy as sa\n",
+    "conn_sa = sa.create_engine('sqlite:///./books.db') \n",
+    "# https://kknews.cc/zh-tw/tech/n93agq.html\n",
+    "rows = conn_sa.execute('SELECT * FROM book')\n",
+    "print [r for r in rows]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'count': '1', 'name': 'Fester Bestertester'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.11\n",
+    "\n",
+    "# -----------\n",
+    "# ref http://jasdeep.ca/2012/05/installing-redis-on-mac-os-x/\n",
+    "# $ brew install redis\n",
+    "# $ redis-server\n",
+    "# -----------\n",
+    "import redis\n",
+    "conn_rds = redis.Redis('localhost', 6379)\n",
+    "conn_rds.hmset('test', {'count':'1', 'name':'Fester Bestertester'})\n",
+    "print conn_rds.hgetall('test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ch9"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Things to Do\n",
+    "9.1. If you haven’t installed flask yet, do so now. This will also install werkzeug, jinja2, and possibly other packages.\n",
+    "9.2. Build a skeleton website, using Flask’s debug/reload development web server. Ensure that the server starts up for hostname localhost on default port 5000. If your computer is already using port 5000 for something else, use another port number.\n",
+    "9.3. Add a home() function to handle requests for the home page. Set it up to return the string It's alive!.\n",
+    "9.4. Create a Jinja2 template file called home.html with the following contents:\n",
+    "    <html>\n",
+    "    <head>\n",
+    "    <title>It's alive!</title>\n",
+    "    <body>\n",
+    "    I'm of course referring to {{thing}}, which is {{height}} feet tall and {{color}}.\n",
+    "    </body>\n",
+    "    </html>\n",
+    "9.5. Modify your server’s home() function to use the home.html template. Provide it with three GET parameters: thing, height, and color."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
